--- a/src/global.css
+++ b/src/global.css
@@ -1,37 +1,34 @@
-body{
-    background-color: #000020;
-    color: #ddddff;
-    font-weight: bold;
-    margin: 0;
-    padding: 1px;
+body {
+  background-color: #000020;
+  color: #ddddff;
+  font-weight: bold;
+  margin: 0;
+  padding: 1px;
 }
 
-h1,h2,h3,ul,li,p,a{
-    margin: 0;
+h1,
+h2,
+h3,
+ul,
+li,
+p,
+a {
+  margin: 0;
 }
 
-input{
-    border: none;
+input {
+  border: none;
 }
 
-.container{
-    max-width: 1050px;
-    margin: 0px auto;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+.container {
+  max-width: 1000px;
+  margin: 0px auto;
+  padding: 0px 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-
-
-
-
-
-
-
-
-
-
